BDD_state.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: projet-devops-2023
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: boudun/mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
  serviceName: mariadb-service
  volumeClaimTemplates:
    - metadata :
        name: mariadb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
