BDD_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: projet-devops-2023
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
