Wordpress_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: projet-devops-2023
spec:
  type: LoadBalancer  # Pour rendre le service accessible de l'extérieur du cluster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: wordpress  # Le label à utiliser pour sélectionner les pods à exposer avec ce service
